--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build XZP Hybrid Kernel (NFC Kernel Only - Minimal + DT check)
+name: Build XZP Kernel boot.img (use STOCK boot as template, CXD224X on)
 
 on:
   workflow_dispatch:
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Maximize Build Space (清理空间)
+    - name: Checkout repo (to get stock/boot.img)
+      uses: actions/checkout@v4
+
+    - name: Maximize Build Space
       uses: easimon/maximize-build-space@master
       with:
         root-reserve-mb: 2048
@@ -26,10 +29,7 @@ jobs:
     - name: Show Disk (before)
       run: |
         set -e
-        echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
         df -h
-        echo "== largest dirs in / =="
-        sudo du -xhd1 / 2>/dev/null | sort -h | tail -n 20 || true
 
     - name: Install Dependencies
       run: |
@@ -56,15 +56,25 @@ jobs:
     - name: Prepare workspace directory
       run: |
         set -e
-        mkdir -p "$GITHUB_WORKSPACE/lineage"
-        echo "WORKDIR=$GITHUB_WORKSPACE/lineage" >> $GITHUB_ENV
-        df -h "$GITHUB_WORKSPACE" || true
+        mkdir -p "$GITHUB_WORKSPACE/src"
+        echo "WORKDIR=$GITHUB_WORKSPACE/src" >> $GITHUB_ENV
+        echo "STOCK_BOOT=$GITHUB_WORKSPACE/stock/boot.img" >> $GITHUB_ENV
+        ls -la "$GITHUB_WORKSPACE/stock" || true
 
-    - name: Create local manifest git repo (minimal.xml)
+    - name: Verify stock boot.img exists
+      run: |
+        set -e
+        if [ ! -f "$STOCK_BOOT" ]; then
+          echo "❌ Missing stock boot at: $STOCK_BOOT"
+          echo "Please commit it into your repo as stock/boot.img"
+          exit 1
+        fi
+        ls -lah "$STOCK_BOOT"
+
+    - name: Create minimal manifest repo (kernel + mkbootimg + prebuilt clang)
       run: |
         set -e
         cd "$WORKDIR"
-
         rm -rf manifest-repo
         mkdir -p manifest-repo
         cd manifest-repo
@@ -73,128 +83,131 @@ jobs:
         cat > minimal.xml <<'EOF'
         <?xml version="1.0" encoding="UTF-8"?>
         <manifest>
-          <remote name="los"  fetch="https://github.com/LineageOS/" />
           <remote name="gh"   fetch="https://github.com/" />
           <remote name="aosp" fetch="https://android.googlesource.com/" />
+          <default remote="gh" revision="main" />
 
-          <default remote="los" revision="lineage-22.0" />
-
-          <!-- LOS 22 build skeleton -->
-          <project name="android_build" path="build" />
-          <project name="android_build_soong" path="build/soong" />
-          <project name="android_system_core" path="system/core" />
-          <project name="android_system_sepolicy" path="system/sepolicy" />
-          <project name="android_frameworks_base" path="frameworks/base" />
-
-          <!-- Commonly needed -->
-          <project name="android_hardware_interfaces" path="hardware/interfaces" />
-          <project name="android_system_tools_mkbootimg" path="system/tools/mkbootimg" />
-          <project name="android_system_extras" path="system/extras" />
-
-          <!-- AOSP upstream -->
-          <project name="platform/external/libcxx"
-                   path="external/libcxx"
-                   remote="aosp"
-                   revision="main" />
-          <project name="platform/external/zlib"
-                   path="external/zlib"
-                   remote="aosp"
-                   revision="main" />
-
-          <project name="platform/prebuilts/build-tools"
-                   path="prebuilts/build-tools"
-                   remote="aosp"
-                   revision="main" />
-          <project name="platform/prebuilts/tools"
-                   path="prebuilts/tools"
-                   remote="aosp"
-                   revision="main" />
-          <project name="platform/prebuilts/clang/host/linux-x86"
-                   path="prebuilts/clang/host/linux-x86"
-                   remote="aosp"
-                   revision="main" />
-
-          <!-- Hybrid sources -->
           <project name="whatawurst/android_kernel_sony_msm8998"
                    path="kernel/sony/msm8998"
                    remote="gh"
                    revision="lineage-21" />
 
-          <project name="whatawurst/android_device_sony_maple"
-                   path="device/sony/maple"
-                   remote="gh"
-                   revision="lineage-21" />
+          <project name="platform/system/tools/mkbootimg"
+                   path="system/tools/mkbootimg"
+                   remote="aosp"
+                   revision="main" />
 
-          <project name="whatawurst/android_device_sony_yoshino-common"
-                   path="device/sony/yoshino-common"
-                   remote="gh"
-                   revision="lineage-21" />
+          <project name="platform/prebuilts/clang/host/linux-x86"
+                   path="prebuilts/clang/host/linux-x86"
+                   remote="aosp"
+                   revision="main" />
         </manifest>
         EOF
 
         git add minimal.xml
-        git commit -m "Add minimal manifest" >/dev/null
+        git commit -m "kernel-only manifest" >/dev/null
 
-        echo "== minimal.xml =="
-        cat minimal.xml
-
-    - name: Init Repo (Minimal)
-      run: |
-        set -e
-        cd "$WORKDIR"
-        repo init -u "$WORKDIR/manifest-repo" -b main -m minimal.xml \
-          --depth=1 \
-          --partial-clone \
-          --clone-filter=blob:none
-
-    - name: Repo Sync (fail-fast)
+    - name: Init + Sync (kernel-only)
       run: |
         set -euo pipefail
         cd "$WORKDIR"
-        echo "== repo sync =="
+        repo init -u "$WORKDIR/manifest-repo" -b main -m minimal.xml \
+          --depth=1 --partial-clone --clone-filter=blob:none
         repo sync -c -j1 --fail-fast --force-sync --no-clone-bundle --no-tags --optimized-fetch --prune
 
-    - name: Patch defconfig (auto-pick maple defconfig; enable CXD224X, disable PN553)
+    - name: Extract stock boot params + ramdisk (Python, no external tools)
+      run: |
+        set -euo pipefail
+        cd "$WORKDIR"
+        python3 - <<'PY'
+        import os, struct, math
+
+        boot = os.environ["STOCK_BOOT"]
+        outdir = os.path.join(os.environ["WORKDIR"], "out")
+        os.makedirs(outdir, exist_ok=True)
+
+        with open(boot,"rb") as f:
+          hdr = f.read(1660)
+          f.seek(0)
+          blob = f.read()
+
+        if hdr[:8] != b"ANDROID!":
+          raise SystemExit("Not an ANDROID! boot image")
+
+        # classic header layout
+        (kernel_size,kernel_addr,ramdisk_size,ramdisk_addr,second_size,second_addr,
+         tags_addr,page_size,dt_size,unused) = struct.unpack("<10I", hdr[8:48])
+
+        cmdline = hdr[64:64+512].split(b"\0",1)[0].decode("ascii","ignore")
+        extra = hdr[608:608+1024].split(b"\0",1)[0].decode("ascii","ignore")
+        full_cmdline = (cmdline + " " + extra).strip()
+
+        def align(x, a): return ((x + a - 1)//a)*a
+
+        # sections start after header, each aligned to page_size
+        off = page_size
+        kernel = blob[off:off+kernel_size]
+        off = align(off + kernel_size, page_size)
+        ramdisk = blob[off:off+ramdisk_size]
+
+        ramdisk_path = os.path.join(outdir, "stock_ramdisk.cpio.gz")
+        with open(ramdisk_path,"wb") as w:
+          w.write(ramdisk)
+
+        # export for later steps
+        def hex8(x): return "0x%08x"%x
+        env_path = os.path.join(outdir, "stock_boot.env")
+        with open(env_path,"w") as e:
+          e.write(f"STOCK_PAGE_SIZE={page_size}\n")
+          e.write(f"STOCK_KERNEL_ADDR={hex8(kernel_addr)}\n")
+          e.write(f"STOCK_RAMDISK_ADDR={hex8(ramdisk_addr)}\n")
+          e.write(f"STOCK_TAGS_ADDR={hex8(tags_addr)}\n")
+          e.write(f"STOCK_CMDLINE={full_cmdline}\n")
+          e.write(f"STOCK_RAMDISK={ramdisk_path}\n")
+
+        print("== STOCK BOOT PARAMS ==")
+        print("page_size:", page_size)
+        print("kernel_addr:", hex8(kernel_addr))
+        print("ramdisk_addr:", hex8(ramdisk_addr))
+        print("tags_addr:", hex8(tags_addr))
+        print("cmdline:", full_cmdline)
+        print("ramdisk:", ramdisk_path)
+        PY
+
+        # load env into GITHUB_ENV (multiline-safe)
+        echo "== exporting env =="
+        while IFS= read -r line; do
+          key="${line%%=*}"
+          val="${line#*=}"
+          if [ "$key" = "STOCK_CMDLINE" ]; then
+            echo "STOCK_CMDLINE<<EOF" >> $GITHUB_ENV
+            echo "$val" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          else
+            echo "$line" >> $GITHUB_ENV
+          fi
+        done < "$WORKDIR/out/stock_boot.env"
+
+    - name: Patch defconfig (auto pick maple; enable CXD224X, disable PN553)
       run: |
         set -euo pipefail
         cd "$WORKDIR"
 
         CFG_DIR="kernel/sony/msm8998/arch/arm64/configs"
-        if [ ! -d "$CFG_DIR" ]; then
-          echo "❌ configs dir not found: $CFG_DIR"
-          exit 1
-        fi
-
-        echo "== Available defconfigs (top) =="
-        ls -1 "$CFG_DIR" | sed -n '1,120p'
-
         CANDIDATES=(
           "$CFG_DIR/lineage-msm8998-yoshino-maple_defconfig"
           "$CFG_DIR/lineage-msm8998-yoshino-maple_dsds_defconfig"
           "$CFG_DIR/lineage-msm8998-yoshino-poplar_kddi_defconfig"
-          "$CFG_DIR/lineage-msm8998-yoshino-poplar_defconfig"
-          "$CFG_DIR/lineage-msm8998-yoshino-lilac_defconfig"
           "$CFG_DIR/defconfig"
         )
 
         CONFIG_FILE=""
         for f in "${CANDIDATES[@]}"; do
-          if [ -f "$f" ]; then
-            CONFIG_FILE="$f"
-            break
-          fi
+          if [ -f "$f" ]; then CONFIG_FILE="$f"; break; fi
         done
 
         if [ -z "$CONFIG_FILE" ]; then
-          echo "!! candidates not found, trying auto-search for maple defconfig..."
-          FOUND="$(ls -1 "$CFG_DIR"/lineage*-maple*_defconfig 2>/dev/null | head -n 1 || true)"
-          if [ -n "$FOUND" ]; then
-            CONFIG_FILE="$FOUND"
-          fi
-        fi
-
-        if [ -z "$CONFIG_FILE" ]; then
-          echo "❌ defconfig not found. Full list:"
+          echo "❌ defconfig not found"
           ls -la "$CFG_DIR"
           exit 1
         fi
@@ -216,45 +229,96 @@ jobs:
           echo "# CONFIG_NFC_PN553 is not set" >> "$CONFIG_FILE"
         fi
 
-        echo "== After patch (verify) =="
+        echo "== verify =="
         grep -nE "CONFIG_SONY_CXD224X=|CONFIG_NFC_PN553=|# CONFIG_NFC_PN553 is not set" "$CONFIG_FILE" || true
+        echo "DEFCONFIG_BASENAME=$(basename "$CONFIG_FILE")" >> $GITHUB_ENV
 
-    - name: DT sanity check (does maple DTS mention cxd224x/bd7602?)
+    - name: Build kernel (clang) -> Image.gz-dtb/Image.gz/Image
+      run: |
+        set -euo pipefail
+        cd "$WORKDIR/kernel/sony/msm8998"
+
+        CLANG_DIR="$WORKDIR/prebuilts/clang/host/linux-x86"
+        CLANG_BIN="$(find "$CLANG_DIR" -type f -path "*/bin/clang" | head -n 1 || true)"
+        if [ -z "$CLANG_BIN" ]; then
+          echo "❌ clang not found under $CLANG_DIR"
+          exit 1
+        fi
+        export PATH="$(dirname "$CLANG_BIN"):$PATH"
+
+        OUT="$WORKDIR/out/kernel"
+        mkdir -p "$OUT"
+
+        make O="$OUT" ARCH=arm64 "$DEFCONFIG_BASENAME"
+
+        # try common targets
+        make -j"$(nproc)" O="$OUT" ARCH=arm64 \
+          CC=clang LD=ld.lld AR=llvm-ar NM=llvm-nm \
+          OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip \
+          Image.gz-dtb || true
+
+        make -j"$(nproc)" O="$OUT" ARCH=arm64 \
+          CC=clang LD=ld.lld AR=llvm-ar NM=llvm-nm \
+          OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip \
+          Image.gz || true
+
+        make -j"$(nproc)" O="$OUT" ARCH=arm64 \
+          CC=clang LD=ld.lld AR=llvm-ar NM=llvm-nm \
+          OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip \
+          Image || true
+
+        echo "== kernel artifacts =="
+        ls -la "$OUT/arch/arm64/boot" || true
+
+        KIMG=""
+        if [ -f "$OUT/arch/arm64/boot/Image.gz-dtb" ]; then
+          KIMG="$OUT/arch/arm64/boot/Image.gz-dtb"
+        elif [ -f "$OUT/arch/arm64/boot/Image.gz" ]; then
+          KIMG="$OUT/arch/arm64/boot/Image.gz"
+        elif [ -f "$OUT/arch/arm64/boot/Image" ]; then
+          KIMG="$OUT/arch/arm64/boot/Image"
+        fi
+
+        if [ -z "$KIMG" ]; then
+          echo "❌ kernel Image not found"
+          exit 1
+        fi
+
+        echo "KERNEL_IMAGE=$KIMG" >> $GITHUB_ENV
+        echo "✅ KERNEL_IMAGE=$KIMG"
+
+    - name: Repack boot.img (use stock ramdisk + stock params)
       run: |
         set -euo pipefail
         cd "$WORKDIR"
 
-        echo "== Search DTS/DTBO sources for cxd224x/bd7602/felica/nfc =="
-        git grep -nE "cxd224x|bd7602|felica|osaifu|nfc" \
-          device/sony/maple device/sony/yoshino-common kernel/sony/msm8998/arch/arm64/boot/dts \
-          || true
+        MKBOOTIMG_PY="$WORKDIR/system/tools/mkbootimg/mkbootimg.py"
+        if [ ! -f "$MKBOOTIMG_PY" ]; then
+          echo "❌ mkbootimg.py not found"
+          exit 1
+        fi
 
-    - name: Build Boot Image (kernel-only target) - fix TOP unbound
-      run: |
-        set -eo pipefail
-        cd "$WORKDIR"
+        OUTBOOT="$WORKDIR/out/boot_new.img"
 
-        # ✅ envsetup.sh 在某些实现里会引用未定义变量；避免 set -u 触发崩溃
-        set +u
-        export TOP="$PWD"
+        # Convert addr -> base/offset form (classic)
+        # For your stock boot: kernel_addr=0x8000, ramdisk_addr=0x01000000, tags_addr=0x100
+        # Most Sony classic uses base=0, offsets = addr values.
+        python3 "$MKBOOTIMG_PY" \
+          --kernel "$KERNEL_IMAGE" \
+          --ramdisk "$STOCK_RAMDISK" \
+          --pagesize "$STOCK_PAGE_SIZE" \
+          --base 0x00000000 \
+          --kernel_offset "$STOCK_KERNEL_ADDR" \
+          --ramdisk_offset "$STOCK_RAMDISK_ADDR" \
+          --tags_offset "$STOCK_TAGS_ADDR" \
+          --cmdline "$STOCK_CMDLINE" \
+          -o "$OUTBOOT"
 
-        source build/envsetup.sh
-
-        # 恢复严格模式（仍保留 -e）
-        set -u
-
-        export ALLOW_MISSING_DEPENDENCIES=true
-        export BUILD_BROKEN_MISSING_REQUIRED_MODULES=true
-        export BUILD_BROKEN_ELF_PREBUILT_PRODUCT_COPY_FILES=true
-
-        lunch lineage_maple-userdebug
-        mka bootimage
-
-        echo "== boot.img =="
-        ls -la out/target/product/maple/boot.img
+        echo "== new boot =="
+        ls -lah "$OUTBOOT"
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: boot_img_kernel_only_cxd224x
-        path: ${{ github.workspace }}/lineage/out/target/product/maple/boot.img
+        name: boot_img_kernel_repacked_cxd224x
+        path: ${{ github.workspace }}/src/out/boot_new.img
