--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,29 @@ on:
         description: "Kernel defconfig name (optional; build_kernel.sh will auto-pick if missing/wrong)"
         required: true
         default: "lineage_yoshino_defconfig"
+      magisk_ver:
+        description: "Magisk version to extract magiskboot from"
+        required: true
+        default: "26.4"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     env:
       TZ: Asia/Tokyo
+
+      # ---- Boot header values (from your magiskboot -h output / unpack_bootimg print) ----
+      BOOT_HEADER_VERSION: "0"
+      BOOT_PAGESIZE: "4096"
+      BOOT_BASE: "0x00000000"
+      BOOT_KERNEL_OFFSET: "0x00008000"
+      BOOT_RAMDISK_OFFSET: "0x01000000"
+      BOOT_SECOND_OFFSET: "0x00000000"
+      BOOT_TAGS_OFFSET: "0x00000100"
+      BOOT_OS_VERSION: "15.0.0"
+      BOOT_OS_PATCH: "2024-11"
+      BOOT_NAME: ""
+      BOOT_CMDLINE: "ehci-hcd.park=3 lpm_levels.sleep_disabled=1 sched_enable_hmp=0 sched_enable_power_aware=1 service_locator.enable=1 swiotlb=2048 androidboot.configfs=true androidboot.usbcontroller=a800000.dwc3 loop.max_part=7 androidboot.hardware=maple"
 
     steps:
       - name: Checkout repo
@@ -33,11 +50,41 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
             bc bison build-essential ccache curl flex git libelf-dev libssl-dev \
             python3 unzip zlib1g-dev lz4 ca-certificates file \
-            gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf \
-            android-tools-mkbootimg
+            gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
 
-          mkbootimg --help | head -n 10 || true
-          unpack_bootimg --help | head -n 10 || true
+      # ---- Install magiskboot for UNPACK only (from Magisk APK libmagiskboot.so) ----
+      - name: Install magiskboot (for unpack)
+        run: |
+          set -eux
+          MAGISK_VER="${{ inputs.magisk_ver }}"
+          URL="https://github.com/topjohnwu/Magisk/releases/download/v${MAGISK_VER}/Magisk-v${MAGISK_VER}.apk"
+
+          rm -rf magisk_unpack
+          mkdir -p magisk_unpack
+
+          curl -fL --retry 5 --retry-delay 2 -o magisk.apk "$URL"
+          unzip -q magisk.apk -d magisk_unpack
+
+          MB_SO="magisk_unpack/lib/x86_64/libmagiskboot.so"
+          if [ ! -f "$MB_SO" ]; then
+            echo "ERROR: $MB_SO not found. Listing:"
+            find magisk_unpack -maxdepth 4 -type f | head -n 200
+            exit 1
+          fi
+
+          chmod +x "$MB_SO"
+          sudo cp "$MB_SO" /usr/local/bin/magiskboot
+          sudo chmod +x /usr/local/bin/magiskboot
+          magiskboot --help | head -n 15 || true
+
+      # ---- Get AOSP mkbootimg.py (do NOT use Ubuntu unpack_bootimg) ----
+      - name: Fetch AOSP mkbootimg tools
+        run: |
+          set -eux
+          rm -rf aosp_mkbootimg
+          git clone --depth=1 https://android.googlesource.com/platform/system/tools/mkbootimg aosp_mkbootimg
+          ls -lah aosp_mkbootimg
+          python3 aosp_mkbootimg/mkbootimg.py --help | head -n 20 || true
 
       # ---- Select kernel branch (auto fallback) ----
       - name: Select kernel branch (auto fallback)
@@ -67,47 +114,39 @@ jobs:
           echo "ERROR: No suitable branch found on $REPO"
           exit 1
 
-      # ---- Unpack base boot using unpack_bootimg ----
-      - name: Unpack base boot (cfg + ramdisk + dtb)
+      # ---- Unpack base boot with magiskboot (works), save base dtb + ramdisk ----
+      - name: Unpack base boot (magiskboot)
         run: |
           set -eux
           test -f boot.img
-
           rm -rf unpack
           mkdir -p unpack
-          cp boot.img boot-base.img
+          cp boot.img unpack/boot-base.img
+          cd unpack
 
-          unpack_bootimg --boot_img boot-base.img --out unpack
+          magiskboot unpack -h boot-base.img
+          magiskboot unpack boot-base.img
 
-          echo "Unpacked files:"
-          ls -lah unpack
+          # Save original kernel_dtb
+          test -f kernel_dtb
+          cp kernel_dtb base_kernel_dtb
 
-          # Save dtb (name differs by tool versions)
-          if [ -f unpack/dtb ]; then
-            cp unpack/dtb unpack/base_dtb
-          elif [ -f unpack/kernel_dtb ]; then
-            cp unpack/kernel_dtb unpack/base_dtb
+          # Determine ramdisk output
+          # magiskboot typically outputs ramdisk.cpio (maybe already decompressed)
+          if [ -f ramdisk.cpio.gz ]; then
+            cp ramdisk.cpio.gz base_ramdisk.gz
+          elif [ -f ramdisk.cpio ]; then
+            # Boot expects gzip ramdisk (your header showed RAMDISK_FMT gzip), so gzip it
+            gzip -c ramdisk.cpio > base_ramdisk.gz
+          elif [ -f ramdisk.gz ]; then
+            cp ramdisk.gz base_ramdisk.gz
           else
-            echo "ERROR: no dtb found in unpack output!"
-            ls -lah unpack
+            echo "ERROR: cannot find ramdisk output from magiskboot!"
+            ls -lah
             exit 1
           fi
 
-          # Save ramdisk (name differs by tool versions)
-          if [ -f unpack/ramdisk ]; then
-            cp unpack/ramdisk unpack/base_ramdisk
-          elif [ -f unpack/ramdisk.gz ]; then
-            cp unpack/ramdisk.gz unpack/base_ramdisk
-          else
-            echo "ERROR: no ramdisk found in unpack output!"
-            ls -lah unpack
-            exit 1
-          fi
-
-          test -f unpack/bootimg.cfg
-          echo "---- bootimg.cfg ----"
-          cat unpack/bootimg.cfg
-          echo "---------------------"
+          ls -lah base_kernel_dtb base_ramdisk.gz
 
       # ---- Build kernel (Image.gz) ----
       - name: Build kernel (Image.gz)
@@ -123,79 +162,30 @@ jobs:
           test -f out/Image.gz
           ls -lah out/Image.gz
 
-      # ---- Repack boot with mkbootimg (replace kernel only; reuse ramdisk + dtb) ----
-      - name: Repack boot (mkbootimg)
+      # ---- Repack boot with AOSP mkbootimg.py (avoid magiskboot repack + avoid ubuntu unpack_bootimg) ----
+      - name: Repack boot (AOSP mkbootimg.py)
         run: |
           set -eux
+          test -f out/Image.gz
+          test -f unpack/base_ramdisk.gz
+          test -f unpack/base_kernel_dtb
 
-          KERNEL_NEW="out/Image.gz"
-          RAMDISK="unpack/base_ramdisk"
-          DTB="unpack/base_dtb"
-          CFG="unpack/bootimg.cfg"
-
-          test -f "$KERNEL_NEW"
-          test -f "$RAMDISK"
-          test -f "$DTB"
-          test -f "$CFG"
-
-          get_cfg() {
-            local k="$1"
-            grep -E "^${k}=" "$CFG" | head -n 1 | cut -d= -f2-
-          }
-
-          PAGESIZE="$(get_cfg pagesize)"
-          BASE="$(get_cfg base)"
-          KERNEL_OFFSET="$(get_cfg kernel_offset)"
-          RAMDISK_OFFSET="$(get_cfg ramdisk_offset)"
-          SECOND_OFFSET="$(get_cfg second_offset)"
-          TAGS_OFFSET="$(get_cfg tags_offset)"
-          NAME="$(get_cfg name)"
-          CMDLINE="$(get_cfg cmdline)"
-          OS_VERSION="$(get_cfg os_version)"
-          OS_PATCH_LEVEL="$(get_cfg os_patch_level)"
-          HEADER_VERSION="$(get_cfg header_version)"
-
-          : "${HEADER_VERSION:=0}"
-          : "${PAGESIZE:=4096}"
-          : "${BASE:=0x00000000}"
-          : "${KERNEL_OFFSET:=0x00008000}"
-          : "${RAMDISK_OFFSET:=0x01000000}"
-          : "${SECOND_OFFSET:=0x00f00000}"
-          : "${TAGS_OFFSET:=0x00000100}"
-          : "${NAME:=}"
-          : "${CMDLINE:=}"
-          : "${OS_VERSION:=15.0.0}"
-          : "${OS_PATCH_LEVEL:=2024-11}"
-
-          echo "mkbootimg params:"
-          echo "  header_version=$HEADER_VERSION"
-          echo "  pagesize=$PAGESIZE"
-          echo "  base=$BASE"
-          echo "  kernel_offset=$KERNEL_OFFSET"
-          echo "  ramdisk_offset=$RAMDISK_OFFSET"
-          echo "  second_offset=$SECOND_OFFSET"
-          echo "  tags_offset=$TAGS_OFFSET"
-          echo "  os_version=$OS_VERSION"
-          echo "  os_patch_level=$OS_PATCH_LEVEL"
-          echo "  name=$NAME"
-          echo "  cmdline=$CMDLINE"
-
-          mkbootimg \
-            --header_version "$HEADER_VERSION" \
-            --pagesize "$PAGESIZE" \
-            --base "$BASE" \
-            --kernel_offset "$KERNEL_OFFSET" \
-            --ramdisk_offset "$RAMDISK_OFFSET" \
-            --second_offset "$SECOND_OFFSET" \
-            --tags_offset "$TAGS_OFFSET" \
-            --kernel "$KERNEL_NEW" \
-            --ramdisk "$RAMDISK" \
-            --dtb "$DTB" \
-            --cmdline "$CMDLINE" \
-            --os_version "$OS_VERSION" \
-            --os_patch_level "$OS_PATCH_LEVEL" \
-            --name "$NAME" \
-            -o boot-nfc.img
+          python3 aosp_mkbootimg/mkbootimg.py \
+            --header_version "${BOOT_HEADER_VERSION}" \
+            --pagesize "${BOOT_PAGESIZE}" \
+            --base "${BOOT_BASE}" \
+            --kernel_offset "${BOOT_KERNEL_OFFSET}" \
+            --ramdisk_offset "${BOOT_RAMDISK_OFFSET}" \
+            --second_offset "${BOOT_SECOND_OFFSET}" \
+            --tags_offset "${BOOT_TAGS_OFFSET}" \
+            --kernel out/Image.gz \
+            --ramdisk unpack/base_ramdisk.gz \
+            --dtb unpack/base_kernel_dtb \
+            --cmdline "${BOOT_CMDLINE}" \
+            --os_version "${BOOT_OS_VERSION}" \
+            --os_patch_level "${BOOT_OS_PATCH}" \
+            --name "${BOOT_NAME}" \
+            --output boot-nfc.img
 
           ls -lah boot-nfc.img
           sha256sum boot-nfc.img | tee boot-nfc.img.sha256
@@ -207,6 +197,5 @@ jobs:
           path: |
             boot-nfc.img
             boot-nfc.img.sha256
-            unpack/bootimg.cfg
-            unpack/base_dtb
-            unpack/base_ramdisk
+            unpack/base_kernel_dtb
+            unpack/base_ramdisk.gz
